# Airbnb-django-backend

./: README.md  code-challenge.txt  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_perk_detail_alter_perk_explanation.py  0003_experience_category.py  0004_rename_addres_experience_address.py  0005_alter_experience_category_alter_experience_host_and_more.py  0006_alter_experience_perks.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_video_experience.py  0003_alter_photo_experience_alter_photo_room_and_more.py  0004_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  garbage.py  models.py  serializers.py  test  urls.py  views.py
rooms/migrations/: 0001_initial.py  0004_room_category.py  (+5 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+13 files in other folders)
